--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/forms": "^20.3.9",
     "@angular/common": "^20.3.0",
     "@google/genai": "^1.28.0",
+    "html-to-image": "1.11.11",
     "@angular/build": "^20.3.0",
     "@angular/cli": "^20.3.0",
     "@angular/compiler-cli": "^20.3.0",
